--- a/ConversaoNormas/nbproject/private/private.properties
+++ b/ConversaoNormas/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.home=/usr/local/apache-tomcat-8.0.27
 j2ee.server.instance=tomcat80:home=/usr/local/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chromium.INTEGRATED
 user.properties.file=/home/kemper/.netbeans/8.2/build.properties
